--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -13,7 +13,6 @@
         tools:context=".ui.fragments.UserProfileFragment">
 
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -22,33 +21,33 @@
 
 
             <LinearLayout
-                android:visibility="gone"
                 android:id="@+id/userLogin"
-                android:orientation="vertical"
                 android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:gravity="center"
-                android:layout_height="match_parent">
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:fontFamily="@font/satoshi_medium"
-                    android:textSize="24sp"
                     android:gravity="center"
                     android:text="Please Login To Perform Further Actions"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:textSize="24sp" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btnLoginRegisterUserProfile"
-                    android:text="Login/Register"
-                    android:textAllCaps="false"
-                    android:textSize="12sp"
-                    android:textColor="@color/white"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginRight="16dp"
-                    android:layout_marginLeft="16dp"
                     android:background="@drawable/normal_button_bg"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:text="Login/Register"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:textSize="12sp" />
 
             </LinearLayout>
 
@@ -83,7 +82,7 @@
                     android:padding="8dp"
                     android:scaleType="centerCrop"
                     android:src="@drawable/ic_user"
-                    android:transitionName="fullImage"/>
+                    android:transitionName="fullImage" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/txtUserNameFrag"
@@ -93,7 +92,7 @@
                     android:layout_marginTop="6dp"
                     android:fontFamily="@font/satoshi_bold"
                     android:gravity="center"
-                    android:text="SurajSinh Rathod"
+                    android:text=""
                     android:textColor="@color/title_text_color"
                     android:textSize="22sp"
                     android:textStyle="bold" />
@@ -125,7 +124,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="4dp"
                         android:fontFamily="@font/satoshi_medium"
-                        android:text="surajsinhrathod75@gmail.com "
+                        android:text=""
                         android:textColor="@color/title_text_color"
                         android:textSize="16sp" />
 
@@ -158,7 +157,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="4dp"
                         android:fontFamily="@font/satoshi_medium"
-                        android:text="+91 9512865416 "
+                        android:text=""
                         android:textColor="@color/title_text_color"
                         android:textSize="16sp" />
 
@@ -193,7 +192,7 @@
                         android:layout_marginLeft="4dp"
                         android:fontFamily="@font/satoshi_medium"
                         android:gravity="center"
-                        android:text="857, Indiranagar-2, Shradha chowk , Lambha ahmedabad"
+                        android:text=""
                         android:textColor="@color/title_text_color"
                         android:textSize="14sp" />
 
@@ -227,7 +226,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="4dp"
                         android:fontFamily="@font/satoshi_medium"
-                        android:text="382405"
+                        android:text=""
                         android:textColor="@color/title_text_color"
                         android:textSize="16sp" />
 
